# sec-company-lookup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py.backup
.github/workflows/: publish.yml  tests.yml
examples/: advanced_usage.py  basic_usage.py
sec_company_lookup/: __init__.py  config.py  sec_company_lookup.py
sec_company_lookup/api/: __init__.py  api.py
sec_company_lookup/db/: __init__.py  db.py
sec_company_lookup/types/: __init__.py  types.py
sec_company_lookup/utils/: __init__.py  utils.py
secmap/: __init__.py  secmap.py
secmap/db/: __init__.py  db.py
secmap/utils/: __init__.py  utils.py
tests/: __init__.py  test_data.py  test_performance.py  test_sec_company_lookup.py  test_secmap.py
tests/db/: test_db.py
tests/utils/: __init__.py  test_utils.py
